Added strick line on the text if the task is set completed

--- a/app/src/main/res/layout/activity_todo_edit.xml
+++ b/app/src/main/res/layout/activity_todo_edit.xml
@@ -39,6 +39,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
+            android:id="@+id/todo_detail_checkBox_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
